# fastapi_creatures

./: .gitignore  pyproject.toml
src/: main.py
src/fake/: creature.py  explorer.py
src/service/: creature.py  explorer.py
src/web/: creature.py  explorer.py
tests/unit/service/: test_creature.py
