[project]
name = "fastapi-creatures"
version = "0.1.0"
description = ""
authors = [
    {name = "Zack Zhang",email = "zack.zhang@nokia.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]

[tool.poetry]
packages = [{include = "fastapi_creatures", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
